<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/blue"
        app:strokeWidth="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_attendance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/attendance_recording_system"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_welcome_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_attendance_label"
                android:letterSpacing="0.04"
                android:text="@string/welcome_admin"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_manage_teachers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_teachers"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangle_button_background"
        android:layout_marginTop="100dp"
        app:icon="@drawable/classmanage"
        android:textColor="@color/white"
        app:iconTint = "@color/white"
        app:iconSize = "30dp"
        app:backgroundTint = "@color/blue"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        />

    <Button
        android:id="@+id/btn_manage_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_students"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_manage_teachers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangle_button_background"
        android:layout_centerHorizontal="true"
        app:icon="@drawable/attend_icon"
        android:textColor="@color/white"
        app:iconTint = "@color/white"
        app:backgroundTint = "@color/blue"
        app:iconSize = "30dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>